--- a/datri_lombardi_maiello.Rmd
+++ b/datri_lombardi_maiello.Rmd
@@ -170,7 +170,8 @@ L'algoritmo VAT produce una matrice di dissimilarità ordinata, ottenuta riorgan
 p1 <- fviz_dist(dist(banknote), show_labels = FALSE) + labs(title = "Banknote data")
 p2 <- fviz_dist(dist(random_df), show_labels = FALSE) + labs(title = "Random data")
 
-grid.arrange(p1, p2, ncol = 2, widths = c(6, 6))
+#TODO: non tovo grid.arrange
+#grid.arrange(p1, p2, ncol = 2, widths = c(6, 6))
 ```
 TODO: sintetizzare
 Nei grafici VAT il rosso indica alta similarità (ossia bassa dissimilarità), mentre il blu indica bassa similarità (ossia alta dissimilarità).
@@ -257,6 +258,7 @@ Questo passaggio ci offre una visione immediata di come ogni variabile contribui
 
 Approfondiamo l'analisi mostrando i contributi delle variabili attraverso diversi metodi grafici, in modo da identificare quali variabili influenzano maggiormente ciascuna componente.
 ```{r}
+library("corrplot")
 corrplot(var$contrib, is.corr=FALSE)
 ```
 L'analisi dei contributi evidenzia il peso relativo di ciascuna variabile nelle componenti principali, utile per interpretare i risultati della PCA.
@@ -384,6 +386,7 @@ Valutiamo ora la qualità dei risultati del nostro algoritmo di clustering media
 
 Iniziamo con la metrica della silhouette media (calcolata come la media di s(i) su tutte le osservazioni), che fornisce un'indicazione complessiva della qualità del clustering: si auspica un valore il più vicino ad 1 possibile.
 ```{r hierarchical agglomerative clustering hclust cut sil}
+library(cluster)
 sil <- silhouette(cluster_cut, distanze)
 
 fviz_silhouette(sil, palette = "jco", ggtheme = theme_classic())
@@ -716,7 +719,7 @@ TODO: Ed infine la GAP analysis:
 
 ```{r}
 set.seed(123)
-fviz_nbclust(df_pca, kmeans, nstart = 25, method = "gap_stat", nboot = 500)+
+fviz_nbclust(df_pca, kmeans, nstart = 25, method = "gap_stat", nboot = 500, verbose=FALSE)+
   labs(subtitle = "Gap statistic method")
 ```
 
@@ -908,20 +911,14 @@ Anche in questo caso, i valori di BIC e ICL sono concordi: per un numero di clus
 
 # 6. Validazione e visualizzazione dei risultati
 
-TODO: inserire commento introduttivo
-
-## 6.3. Validazione con la classe reale
-
-In questa sezione analizzeremo la qualità dei diversi metodi di clustering applicati al dataset banknote, fissando il numero di cluster pari al numero di classi reali, ovvero 2. Questo approccio ci permette di utilizzare tecniche di validazione esterne, dato che disponiamo delle etichette reali delle osservazioni (variabile 'Status').  
+In questa sezione per le tre tipologie di dataset (completo, ridotto e trasformato), descriveremo alcune considerazione dei cluster costruiti con i diversi metodi, cercando di evidenziarne le differenze nella caratteristiche apprese. Successivamente analizzeremo la qualità dei diversi metodi di clustering, fissando il numero di cluster pari al numero di classi reali, ovvero 2. Questo approccio ci permette di utilizzare tecniche di validazione esterne, dato che disponiamo delle etichette reali delle osservazioni (variabile 'Status').  
 Per valutare l'efficacia dei cluster identificati, utilizzeremo diverse metriche, tra cui:  
-- Adjusted Rand Index (ARI) e Meila Variation Index, che misurano il grado di concordanza tra il clustering ottenuto e la classificazione reale.
+- Adjusted Rand Index (ARI) che misura il grado di concordanza tra il clustering ottenuto e la classificazione reale.
 - Metriche di valutazione proprie del machine learning supervisionato, come accuratezza, specificità, recall, matrice di confusione e AUC, per interpretare il clustering come un problema di classificazione binaria.  
-Verranno valutate le misure di validazione al variare del numero di variabili utilizzate nel clustering. In particolare, analizzeremo tre configurazioni differenti:  
-- **Dataset completo**: utilizzo di tutte le variabili disponibili.
-- **Dataset ridotto**: utilizzo esclusivo delle variabili 'Diagonal' e 'Bottom', identificate come le più discriminative.
-- **Dataset trasformato**: utilizzo delle variabili ottenute tramite PCA.
 
-### 6.3.1. Dataset completo 
+## 6.1. Dataset completo 
+
+### 6.1.1. Validazione con la classe reale
 
 Nel seguente codice, applichiamo i diversi algoritmi di clustering al dataset originale con i migliori parametri calcolati in precedenza (fissando il numero di cluster a 2) e aggiungiamo al dataframe le colonne corrispondenti alle assegnazioni di ciascun metodo. Da precisare che in aggiunta agli algoritmi discussi in precedenza, confrontiamo anche l'algoritmo gerarchico divisivo che non è stato affrontato prima.
 
@@ -1066,7 +1063,37 @@ print(results_df)
 
 I risultati mostrano che il metodo **GMM** ha la migliore performance complessiva, con il più alto valore di ARI (0.98) e un'accuratezza del 99.5%. Il clustering gerarchico agglomerativo ha anch'esso buone prestazioni, mentre K-means e K-medoids mostrano una buona affidabilità ma con AUC leggermente inferiori. Analizzando la sensibilità e la specificità, si nota che la sensibilità – ovvero la capacità di identificare correttamente le banconote contraffatte – è generalmente molto alta per tutti gli algoritmi, indicando un'elevata capacità di individuare i falsi. Tuttavia, la specificità, ossia la capacità di riconoscere correttamente le banconote genuine, varia maggiormente tra i metodi. In particolare, K-means mostra una specificità inferiore (0.92) rispetto a K-medoids (0.97) e ai metodi gerarchici (0.98), suggerendo una maggiore tendenza a classificare erroneamente alcune banconote genuine come contraffatte; questo errore è meno grave di classificare una banconota contraffatta come vera.
 
-### 6.3.2. Dataset ridotto
+### 6.1.2. Interpretazione dei risultati
+
+```{r}
+# Assicuriamoci di avere le librerie necessarie
+library(ggplot2)
+library(reshape2)
+
+# Seleziona le variabili numeriche da visualizzare (ad es. "Bottom", "Diagonal", e altre)
+# Qui usiamo solo "Bottom" e "Diagonal" come esempio; se usi il dataset completo, includi anche le altre variabili.
+vars_to_plot <- c("Bottom", "Diagonal")
+
+# Crea un data frame in formato lungo per i boxplot, per il clustering K-means
+boxplot_data <- melt(banknote, 
+                     id.vars = c("Status", "kmeans"), 
+                     measure.vars = vars_to_plot)
+
+# Crea il boxplot
+ggplot(boxplot_data, aes(x = factor(kmeans), y = value, fill = factor(kmeans))) +
+  geom_boxplot() +
+  facet_wrap(~variable, scales = "free") +
+  labs(title = "Boxplot delle variabili per cluster (K-means)",
+       x = "Cluster (K-means)",
+       y = "Valore") +
+  theme_minimal()
+
+```
+
+
+## 6.2. Dataset ridotto
+
+### 6.2.1. Validazione con la classe reale
 
 Nel seguente codice, applichiamo i diversi algoritmi di clustering al dataset ridotto (con le sole variabili 'Diagonal' e 'Bottom') con i migliori parametri calcolati in precedenza (fissando il numero di cluster a 2) e aggiungiamo al dataframe le colonne corrispondenti alle assegnazioni di ciascun metodo.
 
@@ -1176,7 +1203,11 @@ Questa configurazione semplifica il modello senza perdere accuratezza, dimostran
 - K-means, K-medoids e GMM ottengono ARI 0.98, accuracy 99.5% e AUC ~1, confermando che queste due variabili sono altamente discriminative.  
 - GMM raggiunge sensibilità 100%, identificando tutte le banconote contraffatte, mentre K-means e K-medoids garantiscono specificità 100%, evitando falsi positivi.  
 
-### 6.3.3. Dataset trasformato
+### 6.2.2. Interpretazione dei risultati
+
+## 6.3. Dataset ridotto
+
+### 6.3.1. Validazione con la classe reale
 
 Nel seguente codice, applichiamo i diversi algoritmi di clustering al dataset trasformato (con le variabili trasformate mediante tecnica PCA) con i migliori parametri calcolati in precedenza (fissando il numero di cluster a 2) e aggiungiamo al dataframe le colonne corrispondenti alle assegnazioni di ciascun metodo.
 
@@ -1283,6 +1314,8 @@ print(results_df)
 Rispetto ai risultati con il dataset completo o ridotto, l'uso di solo 3 variabili ottenute con PCA ha ridotto la performance globale, in particolare per K-medoids e Gerarchico Agglomerativo. Sebbene l'accuratezza resti elevata, l'ARI e la specificità mostrano una leggera diminuzione, il che suggerisce che la riduzione delle variabili ha compromesso la capacità di questi algoritmi di catturare la struttura dei dati. In particolare, l'algoritmo Gerarchico Agglomerativo mostra una performance molto più bassa in termini di ARI e accuratezza, indicando che l'algoritmo è più sensibile alla perdita di variabili discriminanti.  
 
 In conclusione, dal punto di vista della misurazione delle performance con tecniche esterne (avendo a disposizione la vera classe delle osservazioni), l'algoritmo **GMM** è risultato il migliore nei tre diversi dataset, anche se, tutto sommato, gli altri algoritmi non hanno ottenuto dei cattivi risultati.
+
+### 6.2.2. Interpretazione dei risultati
 
 # 7. Conclusioni
 
